fix: z-index -1 for banner image

--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -136,6 +136,7 @@
     // This is a problem on mobile because of the address bar.
     // Using dvh scales everything very strangely when you scroll.
     height: calc(100vh - 47px - 2*20px);
+    z-index: -1;
 }
 
 .banner_content_container {
